--- a/service_common/pom.xml
+++ b/service_common/pom.xml
@@ -8,10 +8,10 @@
         <version>0.0.1-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-
+         <description>测试Beyond CompareTo工具</description>
     <artifactId>service_common</artifactId>
 
     <dependencies>
-
+         
     </dependencies>
 </project>
